--- a/vdchecker/Base.lproj/Main_iPhone.storyboard
+++ b/vdchecker/Base.lproj/Main_iPhone.storyboard
@@ -1121,20 +1121,20 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="swA-Jd-bYy">
-                                <rect key="frame" x="22" y="131" width="250" height="21"/>
+                                <rect key="frame" x="20" y="98" width="250" height="21"/>
                                 <color key="backgroundColor" red="1" green="0.92866741149999998" blue="0.84087913439999995" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="            .............   通信中   ............." translatesAutoresizingMaskIntoConstraints="NO" id="3T5-m0-6sG">
-                                <rect key="frame" x="20" y="188" width="280" height="360"/>
+                                <rect key="frame" x="20" y="172" width="280" height="360"/>
                                 <color key="backgroundColor" red="1" green="0.92866741149999998" blue="0.84087913439999995" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="detailDisclosure" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nel-nB-SKR">
-                                <rect key="frame" x="279" y="131" width="22" height="22"/>
+                                <rect key="frame" x="277" y="98" width="22" height="22"/>
                                 <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="15"/>
                                 <state key="normal">
                                     <color key="titleColor" red="0.1161915852" green="0.29736868589999998" blue="0.68397241710000001" alpha="1" colorSpace="calibratedRGB"/>
@@ -1144,7 +1144,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wew-ef-xhe">
-                                <rect key="frame" x="22" y="91" width="250" height="21"/>
+                                <rect key="frame" x="20" y="135" width="250" height="21"/>
                                 <color key="backgroundColor" red="1" green="0.92866741149999998" blue="0.84087913439999995" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -1201,7 +1201,7 @@
                         <barButtonItem key="rightBarButtonItem" title="+     " id="bde-53-LOv">
                             <connections>
                                 <action selector="add:" destination="dPY-IH-tTV" id="T3v-Tc-U6t"/>
-                                <segue destination="cp5-Sa-MHe" kind="push" id="c2x-vn-DfS"/>
+                                <segue destination="cp5-Sa-MHe" kind="push" identifier="addSegue" id="c2x-vn-DfS"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -1226,32 +1226,37 @@
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="URL :" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BQc-sa-rv3">
                                 <rect key="frame" x="33" y="99" width="60" height="25"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YMH-L1-LNW">
-                                <rect key="frame" x="33" y="132" width="255" height="30"/>
+                                <rect key="frame" x="33" y="123" width="255" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Title :" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HeN-UB-9Ew">
-                                <rect key="frame" x="33" y="183" width="60" height="25"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <rect key="frame" x="33" y="157" width="60" height="25"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wSc-V9-sPV">
-                                <rect key="frame" x="33" y="216" width="255" height="30"/>
+                                <rect key="frame" x="33" y="181" width="255" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JEy-l6-xLo">
-                                <rect key="frame" x="33" y="274" width="255" height="30"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="            .............   通信中   ............." translatesAutoresizingMaskIntoConstraints="NO" id="wGk-pc-vF1">
+                                <rect key="frame" x="20" y="224" width="280" height="300"/>
                                 <color key="backgroundColor" red="1" green="0.92866741149999998" blue="0.84087913439999995" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JEy-l6-xLo">
+                                <rect key="frame" x="200" y="532" width="100" height="30"/>
+                                <color key="backgroundColor" red="1" green="0.3002394954" blue="0.24404564379999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                 <state key="normal" title="Delete">
-                                    <color key="titleColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
@@ -1262,7 +1267,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="1Db-at-GUP">
-                        <barButtonItem key="rightBarButtonItem" title="Save   " id="H4c-ON-nXC">
+                        <barButtonItem key="rightBarButtonItem" id="H4c-ON-nXC">
                             <connections>
                                 <action selector="save:" destination="cp5-Sa-MHe" id="mxy-sy-m0B"/>
                             </connections>
@@ -1271,7 +1276,9 @@
                     <nil key="simulatedStatusBarMetrics"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
+                        <outlet property="contentTextView" destination="wGk-pc-vF1" id="nIQ-rP-3Qf"/>
                         <outlet property="deleteButton" destination="JEy-l6-xLo" id="EZy-j8-CFx"/>
+                        <outlet property="saveButton" destination="H4c-ON-nXC" id="Xpy-8P-Tw3"/>
                         <outlet property="titleTextField" destination="wSc-V9-sPV" id="5kl-75-hqo"/>
                         <outlet property="urlTextField" destination="YMH-L1-LNW" id="ogu-rc-weN"/>
                     </connections>
